# linux

./: .gitignore  README.md
c++/: CMakeLists.txt  Jamroot  build_debug.sh
c++/3rd/boost/: Jamroot
c++/3rd/boost/asio/steady_timer/: Jamfile.v2  main.cpp
c++/3rd/boost/asio/strandDemo/: Jamfile.v2  main.cpp
c++/3rd/boost/log/: Jamfile.v2
c++/3rd/boost/log/consoleAndrotating/: Jamfile.v2  logger.cpp  main.cpp
c++/3rd/boost/log/liblog/: Jamfile.v2  logger.h  readme
c++/3rd/boost/regex/replace/: Jamfile.v2  main.cpp
c++/3rd/boost/syncQueue/lockfreeQueue/: Jamfile.v2  ProduceAndCustomer.cpp  ProduceAndCustomer.h  main.cpp
c++/3rd/boost/unittest/include/: common.h
c++/3rd/boost/unittest/src/: main.cpp  test_Person.cpp
c++/3rd_demo/boost/: project-config.jam
c++/3rd_demo/boost/asio/signal_set/: signal_set.cpp
c++/3rd_demo/boost/assign/: Jamfile.v2
c++/3rd_demo/boost/log/liblog/: CMakeLists.txt  logger.cpp  logger.h  main.cpp
c++/3rd_demo/boost/serialization/: Jamfile.v2
c++/3rd_demo/boost/serialization/text_archive/: stream_main.cpp
c++/3rd_demo/boost/unittest/: Jamfile.v2
c++/3rd_demo/gflag/: build.sh
c++/3rd_demo/libuv/idle/: compile.sh
c++/3rd_demo/libuv/include/: common.cpp
c++/3rd_demo/libuv/send_to_event_loop/: compile_commands.json
c++/3rd_demo/lmdb_demo/: main.cpp
c++/3rd_demo/protcolbuffer/person/protos/: person.proto
c++/3rd_demo/zeromq/Req_Rep/: client.cpp
c++/DataBase/mysql/simple/: main  main.cpp  makefile
c++/DataBase/sqlserver/ReEncrypterTool/: KDStorageCrypt加密库接口文档.docx  ReEncrypterTool.sln
c++/DataBase/sqlserver/ReEncrypterTool/ReEncrypterTool/: IDataAccess.cpp  IDataAccess.h  Oracle.h  ReEncrypterTool.vcxproj  ReEncrypterTool.vcxproj.filters  ReadMe.txt  SqlServer.cpp  SqlServer.h  common.cpp  common.h  main.cpp  stdafx.cpp
c++/DataBase/sqlserver/ReEncrypterTool/include/: kdstoragecrypt.h
c++/DataBase/sqlserver/ReEncrypterTool/lib/: KDStorageCrypt.lib  oraocci11.lib  oraocci11.sym  oraocci11d.lib  oraocci11d.sym
c++/DataBase/sqlserver/ReEncrypterTool/scripts/: ora_alter_table.sql  sql_alter_table.sql
c++/DataBase/sqlserver/ReEncrypterTool/src/: IDataAccess.cpp  IDataAccess.h  Oracle.cpp  Oracle.h  ReEncrypterTool.vcxproj  SqlServer.cpp  SqlServer.h  common.cpp  common.h  compile.sh  main.cpp  stdafx.cpp  stdafx.h  targetver.h
c++/IPC/fifo/: fifo  fifo.cpp  makefile
c++/IPC/mmap/AnonMmap/: anonmmap.cpp
c++/IPC/mmap/MapFile/: mapfile.cpp
c++/IPC/mmap/NamedMmap/: namedmmap.cpp
c++/IPC/pipe/: makefile  pipe.cpp
c++/IPC/pipe/blockfifo/: blockfifo.cpp  makefile
c++/IPC/pipe/pipe/: pipe.cpp
c++/IPC/pipe/popen/: popen.cpp
c++/IPC/posix/msgqueue/normalqueue/: makefile  msgqueue  normalqueue.cpp
c++/IPC/posix/semaphore/namedSem/: makefile  namedSem.cpp
c++/IPC/posix/semaphore/pvoperator/: pv.cpp
c++/IPC/posix/sharememory/: makefile  sharememory.cpp
c++/IPC/sync/condition/produce_consume/: data.h  lockguard.h  makefile  pro_con.cpp
c++/IPC/sync/fcntl/: fcntl.cpp  makefile
c++/IPC/sync/fcntl/filelocker/: fcntl.cpp
c++/IPC/sync/mutex/mutex/: makefile  mutex  threadmutex.cpp
c++/debug_demo/perf_tool/: main.cpp
c++/debug_demo/strace_tool/: Jamfile.v2  main.cpp
c++/file/cfile/: copydemo.cpp  makefile  vimrc
c++/file/fstream/: fstream.cpp  test.tmp
c++/file/stat/fdtype/: fdtype.cpp  makefile
c++/file/stat/fstat/: llstat  stat.cpp
c++/file/stat/lstat/: makefile  stat.cpp
c++/grammar/c++11/atomic/: 1.txt  atomic.cpp  compile.sh
c++/grammar/chrono/: main.cpp
c++/grammar/class_member/: main.as  main.cpp  main.txt  readme.txt
c++/grammar/const/global_const/: a.cpp  a.h  b.cpp  b.h  common.cpp  common.h  main.cpp  makefile  readme.txt
c++/grammar/operator/assign/: assign.cpp  makefile
c++/grammar/ostringstream/: format_string.cpp
c++/grammar/this_point/: this_point.cpp
c++/grammar/virtual_ptr/: readme  virtual_ptr.cpp
c++/linux/debug_demo/perf_tool/: readme.txt
c++/my_project/: NiDaMQ.rar
c++/my_project/hash/: HashAlgo.cpp  HashAlgo.h  Jamfile.v2  main.cpp  readme.txt
c++/stl/: CMakeLists.txt
c++/stl/algorithm/copy/: Jamfile.v2  main.cpp
c++/stl/algorithm/for_each/: foreach.cpp  makefile
c++/stl/algorithm/insert/: main.cpp
c++/stl/algorithm/merge/: Jamfile.v2  main.cpp
c++/stl/array/: CMakeLists.txt  main.cc
c++/stl/bitset/: bitflag.cpp
c++/stl/list/: CMakeLists.txt  forward_list.cc  list.cc
c++/stl/map/: CMakeLists.txt  map.cc  multi_map.cc  unordered_map.cc
c++/stl/priority_queue/: CMakeLists.txt  main.cc
c++/stl/queue/: CMakeLists.txt  deque.cc
c++/stl/set/: CMakeLists.txt  multi_set.cc  set.cc  unordered_set.cc
c++/stl/stack/: CMakeLists.txt  main.cc
c++/stl/vector/: CMakeLists.txt  main.cc
c++/stl/vector/merge/: Jamfile.v2
c++/string/split/: StringSplit.cpp  StringSplit.h  lsh.cpp  main  main.cpp  pzf.cpp  strtoken.cpp
c++/string/split2/: StringSplit.cpp
c++/third_demo/b_o_o_s_t/: Jamroot
c++/third_demo/b_o_o_s_t/assign/: main.cpp
c++/third_demo/b_o_o_s_t/bind/: Jamfile.v2  demo1.cpp
c++/third_demo/b_o_o_s_t/intrusive_ptr/: CMakeLists.txt  compile_commands.json  demo.cpp  demo.h  version.cmake
c++/third_demo/b_o_o_s_t/serialization/: Jamfile.v2  user.h
c++/third_demo/boost/intrusive_ptr/: main.cpp
c++/third_demo/boost/unittest/: readme.txt
c++/third_demo/gflag/: main  main.cpp
c++/third_demo/libuv/: CMakeLists.txt
c++/third_demo/libuv/dir/: Path.h  main.cpp
c++/third_demo/libuv/thread_pool/: compile.sh  main.cpp
c++/third_demo/libuv/timer/: main.cpp
c++/third_demo/lmdb_demo/: build.sh  main
c++/third_demo/protcolbuffer/person/: build.sh  main.cpp
c++/third_demo/z_e_r_o_m_q/Req_Rep/: client.cpp  compile_client.sh  compile_server.sh  server.cpp
c++/tools/BuildParam/: PagingQueryParam.cpp
c++/tools/IndexAccessStructDemo/: IndexAccessStructDemo.sln
c++/tools/IndexAccessStructDemo/ConsoleApplication3/: CcustNraTaxInfo.cpp  CcustNraTaxInfo.h  ConsoleApplication3.vcxproj  ConsoleApplication3.vcxproj.filters  main.cpp
demo/libuv/send_to_event_loop/: CMakeLists.txt  build_debug.sh  main.cpp
(+119 files in other folders)
